collapse Bug fixed.

--- a/networkviz/static/css/console.css
+++ b/networkviz/static/css/console.css
@@ -5,6 +5,7 @@
 }
 
 .console-panel{
+    width: 100%;
     position: relative;
     display: inline-block;
     background: #ffffff;
